--- a/carbon copy/styles.css
+++ b/carbon copy/styles.css
@@ -11,17 +11,22 @@ body {
 }
 
 nav {
+    position: fixed;
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     width: 100%;
     justify-content: space-between;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000000;
 }
 
 .Titre {
     font-size: 300%;
     margin-left: 2%;
     margin-top: 2%;
+    margin-bottom: 2%;
     font-weight:normal;
 }
 
@@ -57,18 +62,21 @@ li {
 }
 
 header {
-    margin-top: 15%;
+    margin-top: 25%;
+    margin-left: 10%;
+    margin-right: 10%;
+    white-space: nowrap;
     border-top: 2px solid black;
     border-bottom: 2px solid black;
-    padding: 1%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    white-space: nowrap;
+    width: 80%;
+}
+
+header p {
+    text-align: center;
 }
 
 h1 {
-    margin-left: 14%;
+    margin-left: 10%;
     font-size: 300%;
     font-weight: bold;
     margin-top: 3%;
@@ -99,7 +107,7 @@ h1 {
     margin-left: 80px;
     margin-right: 80px;
     margin-top: 70px;
-    font-weight: lighter;
+    font-weight:normal;
 }
 
 .mission p, .contact p, .about p, .contact input {
@@ -144,6 +152,7 @@ h1 {
     border: 1px solid rgb(92, 117, 92);
     border-radius: 100px;
     margin-left: 69%;
+    cursor: pointer;
 }
 
 .dashboard {
@@ -174,6 +183,15 @@ h1 {
     border: 2px lightgray solid;
     width: 28%;
     padding: 2%;
+    cursor: pointer;
+}
+
+.weather:hover, .news:hover, .horoscope:hover{
+    border: 2px rgb(0, 0, 0) solid;
+}
+
+.weather:hover .linkArticle, .news:hover .linkArticle, .horoscope:hover .linkArticle{
+    text-decoration: underline;
 }
 
 .weather p, .news p, .horoscope p{
@@ -193,6 +211,77 @@ h1 {
 .weather h4, .news h4, .horoscope h4{
     color: rgb(215, 215, 215);
     font-size:90%;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+    z-index: 100000;
+    display: none;
+    position: fixed;
+}
+
+.popup {
+    background-color: white;
+    width: 50%;
+    display: none;
+    position: fixed;
+    z-index: 100000000;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 25px;
+}
+
+#popupTitle {
+    font-size: 40px;
+    text-align: center;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+#popupSubtitle {
+    font-size: 20px;
+    text-align: center;
+    color: rgb(215, 215, 215);
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+#popupText {
+    font-size: 15px;
+    text-align: center;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 8%;
+}
+
+#popupClose {
+    background-color: rgb(255, 255, 255);
+    border: 1px solid black;
+    border-radius: 50px;
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 15px;
+    cursor: pointer;
+}
+
+#popupTextAlignCenter {
+    text-decoration: underline;
+    position: absolute;
+    left: 20px;
+    top: 2px;
+    cursor: pointer;
+}
+#popupTextAlignLeft {
+    text-decoration: underline;
+    position: absolute;
+    left: 75px;
+    top: 2px;
+    cursor: pointer;
 }
 
 
